--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ alembic
 pydantic
 pydantic-settings
 python-dotenv
+email-validator
+python-multipart
 
 # Dependencias para desarrollo y testing (puedes moverlas a un requirements-dev.txt si lo prefieres)
 pytest
