Mejoras en manejo de excepciones y correcciones en tests de API

--- a/.env.test
+++ b/.env.test
@@ -14,11 +14,7 @@ DEBUG=True
 LOG_LEVEL=DEBUG
 
 # Configuración SMTP (opcional)
-SMTP_SERVER=
-SMTP_PORT=
-SMTP_USERNAME=
-SMTP_PASSWORD=
-SMTP_USE_TLS=True
+# Omitidas para tests ya que son opcionales
 
 # Configuración de la documentación de la API
 DOCS_USERNAME=test
