🔒 Seguridad: Configurar Alembic para usar variables de entorno
- Eliminar credenciales hardcodeadas de alembic.ini (línea 89)
- Configurar alembic/env.py para leer credenciales desde .env
- Agregar psycopg2-binary y dependencias de testing faltantes
- Crear script de análisis de dependencias (scripts/sync_requirements.py)
- Sincronizar estado de migraciones con alembic stamp head
- Actualizar requirements.lock con todas las dependencias

Cambios de seguridad:
✅ No más credenciales en texto plano
✅ Configuración dinámica desde variables de entorno
✅ Preparado para despliegue seguro en producción

Archivos modificados:
- alembic.ini: Comentar URL hardcodeada
- alembic/env.py: Cargar .env y construir URL dinámicamente
- requirements.txt: Agregar pytest-asyncio, pytest-cov, psycopg2-binary
- scripts/sync_requirements.py: Nueva herramienta de análisis

--- a/alembic.ini
+++ b/alembic.ini
@@ -86,7 +86,8 @@ path_separator = os
 # file.
 # Usamos un driver síncrono (psycopg2) para Alembic, ya que se ejecuta de forma síncrona.
 # Tu aplicación FastAPI seguirá usando el driver asíncrono (asyncpg) definido en la configuración.
-sqlalchemy.url = postgresql+psycopg2://Gompatri69:Pofa2218**@localhost:5432/app_db
+# La URL de la base de datos se construye dinámicamente en env.py usando variables de entorno
+# sqlalchemy.url = # Se configura dinámicamente desde .env
 
 
 [post_write_hooks]
