docs: Complete Mypy integration and Deno Fresh compatibility
- Add Mypy and type stubs to requirements.txt for complete type checking setup
- Update requirements.lock with all dependencies including type checking tools
- Enhance CI/CD pipeline with Deno Fresh TypeScript type generation
- Update README.md with comprehensive Deno Fresh integration guide
- Document automatic type generation workflow for frontend team

Complete type safety stack:
- Backend: Python + Mypy + Pydantic schemas
- Frontend: Deno Fresh + TypeScript + auto-generated types
- CI/CD: Automated type generation and contract validation
- Documentation: OpenAPI → TypeScript types pipeline

This ensures seamless integration between FastAPI backend and Deno Fresh frontend
with end-to-end type safety and automated contract validation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,9 @@ pytest
 pytest-asyncio
 pytest-cov
 httpx
+
+# Verificación de tipos estáticos
+mypy
+types-passlib
+types-python-jose
+types-redis
